# paint-rl

./: .gitignore  README.md  pyproject.toml
paint_rl/: utils.py
paint_rl/algorithms/: ddpg.py  ppo.py  ppo_cont.py  ppo_multi.py  replay_buffer.py  rollout_buffer.py  td3.py
paint_rl/experiments/: test_ddpg.py  test_dqn.py  test_ppo.py  test_rust.py  test_td3.py
paint_rl/experiments/stroke_gan/: ref_stroke_env.py  train_gan_rl_ppo.py
paint_rl/experiments/supervised_strokes/: gen_supervised.py  hourglass.py  outline_stroke_env.py  stroke_env.py  test_supervised.py  train_rl.py  train_rl_ppo.py  train_rl_ppo_form.py  train_rl_ppo_form_from_img.py  train_rl_ppo_form_sphere.py  train_supervised.py  train_supervised_all.py  train_supervised_cube.py  train_supervised_cylinder.py  train_supervised_sphere.py
paint_rl_rust/: Cargo.toml  paint_rl_rust.pyi  pyproject.toml
paint_rl_rust/benches/: gen_images.rs
paint_rl_rust/src/: env.rs  lib.rs  sim_canvas.rs  tree_search.rs
