[tool.poetry]
name = "paint-rl"
version = "0.1.0"
description = "Using RL for stroke based artistic rendering."
authors = ["Ben Giacalone <bensgiacalone@gmail.com>"]
readme = "README.md"
packages = [{include = "paint_rl"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.0"
isort = "^5.12.0"
tqdm = "^4.65.0"
wandb = "^0.15.3"
gymnasium = {extras = ["classic-control"], version = "^0.28.1"}
envpool = "^0.8.2"
types-tqdm = "^4.65.0.1"
maturin = "^0.15.2"
pillow = "^9.5.0"
scikit-learn = "^1.2.2"
bezier = "^2021.2.12"
matplotlib = "^3.7.1"
scikit-image = "^0.21.0"
splines = "^0.3.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
