[package]
name = "paint_rl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "paint_rl_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
rand = "0.8.5"
tiny-skia = "0.11.1"
num-traits = "0.2.16"