[package]
name = "paint_rl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "paint_rl_rust"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "gen_images"
harness = false

[profile.bench]
debug = true

[dev-dependencies]
criterion = "0.4"

[dependencies]
pyo3 = "0.19.0"
rand = "0.8.5"
tiny-skia = "0.11.1"
num-traits = "0.2.16"
tch = "0.13.0"
image = "0.24.7"
ndarray = "0.15.6"
numpy = "0.19.0"
weighted_rand = "0.4.0"
indicatif = "0.16.0"